--- a/serviceweb-apirest-nodejs/package.json
+++ b/serviceweb-apirest-nodejs/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/brayanesteves/ecommerce-mern-ddd/issues"
   },
-  "homepage": "https://github.com/brayanesteves/ecommerce-mern-ddd#readme"
+  "homepage": "https://github.com/brayanesteves/ecommerce-mern-ddd#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongose": "0.0.2-security"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
