--- a/serviceweb-apirest-nodejs/package.json
+++ b/serviceweb-apirest-nodejs/package.json
@@ -4,7 +4,9 @@
   "description": "Ecommerce MERN Example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,5 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongose": "0.0.2-security"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
