--- a/serviceweb-apirest-nodejs/package.json
+++ b/serviceweb-apirest-nodejs/package.json
@@ -24,8 +24,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.1",
-    "mongose": "0.0.2-security"
-  }, 
+    "mongose": "0.0.2-security",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
+  },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
