--- a/serviceweb-apirest-nodejs/package.json
+++ b/serviceweb-apirest-nodejs/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.1.1",
     "mongose": "0.0.2-security",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
